crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// A decoded SCD4x measurement frame.
typedef struct {
  // The carbon dioxide concentration in parts per million.
  uint16_t co2_ppm;
  // The raw temperature word.
  uint16_t temperature_raw;
  // The raw humidity word.
  uint16_t humidity_raw;
  // The temperature in milli-degrees Celsius, exact in integer arithmetic.
  int32_t milli_celsius;
  // The temperature in degrees Celsius.
  float celsius;
  // The relative humidity in milli-percent.
  uint32_t humidity_milli_percent;
  // The relative humidity as a percentage.
  float relative_humidity_percent;
} PamojaScd4xMeasurement;
// Returns how long an SCD4x command may take before its result can be read.
//
// # Returns
//
// `true` when the command has a documented execution time, with `*out_millis`
// set to it; `false` when it completes as soon as it is acknowledged.
//
// # Safety
//
// `out_millis` must point to a writable `uint16_t`.
bool pamoja_scd4x_max_duration_ms(uint16_t command, uint16_t *out_millis);
// Reports whether an SCD4x accepts a command while it is measuring.
//
// # Returns
//
// `true` when the command may be sent without stopping periodic measurements.
bool pamoja_scd4x_allowed_during_measurement(uint16_t command);
// Parses and CRC-checks a nine-byte SCD4x measurement frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_measurement` filled in, or
// [`PamojaStatus::Codec`] if any word fails its checksum, which means the read
// was corrupted on the bus and should be repeated.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and
// `out_measurement` must point to a writable `PamojaScd4xMeasurement`.
PamojaStatus pamoja_scd4x_parse_measurement(const uint8_t *frame,
                                            uintptr_t frame_len,
                                            PamojaScd4xMeasurement *out_measurement);
// Builds the SCD4x measurement a sensor reporting these physical values would send.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_measurement` filled in, or
// [`PamojaStatus::InvalidArgument`] if the pointer is null.
//
// # Safety
//
// `out_measurement` must point to a writable `PamojaScd4xMeasurement`.
PamojaStatus pamoja_scd4x_measurement_from_physical(uint16_t co2_ppm,
                                                    int32_t milli_celsius,
                                                    uint32_t humidity_milli_percent,
                                                    PamojaScd4xMeasurement *out_measurement);
// Builds the nine bytes an SCD4x sends for a set of raw words, each CRC included.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the nine bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least nine writable bytes.
PamojaStatus pamoja_scd4x_measurement_bytes(uint16_t co2_ppm,
                                            uint16_t temperature_raw,
                                            uint16_t humidity_raw,
                                            uint8_t *out_bytes);
// Converts a raw SCD4x temperature word to milli-degrees Celsius.
//
// # Returns
//
// The temperature, exact in integer arithmetic.
int32_t pamoja_scd4x_milli_celsius(uint16_t raw);
// Converts a raw SCD4x temperature word to degrees Celsius.
//
// # Returns
//
// The temperature.
float pamoja_scd4x_celsius(uint16_t raw);
// Builds the SCD4x temperature word that decodes to a temperature.
//
// # Returns
//
// The raw word, saturating at the ends of the part's range.
uint16_t pamoja_scd4x_temperature_raw(int32_t milli_celsius);
// Converts a raw SCD4x humidity word to milli-percent.
//
// # Returns
//
// The relative humidity, exact in integer arithmetic.
uint32_t pamoja_scd4x_humidity_milli_percent(uint16_t raw);
// Converts a raw SCD4x humidity word to a relative humidity percentage.
//
// # Returns
//
// The relative humidity.
float pamoja_scd4x_relative_humidity_percent(uint16_t raw);
// Builds the SCD4x humidity word that decodes to a relative humidity.
//
// # Returns
//
// The raw word, saturating at full scale.
uint16_t pamoja_scd4x_humidity_raw(uint32_t milli_percent);
// Reports whether an SCD4x data-ready word says a fresh result is waiting.
//
// # Returns
//
// `true` when any of the low eleven bits is set.
bool pamoja_scd4x_data_ready(uint16_t word);
// Builds the SCD4x temperature-offset word for an offset.
//
// # Returns
//
// The word to write, which scales by 2^16 rather than by the 2^16 - 1 the
// measurement words use.
uint16_t pamoja_scd4x_temperature_offset_word(uint32_t milli_celsius);
// Reads an SCD4x temperature-offset word back as an offset.
//
// # Returns
//
// The offset in milli-degrees Celsius.
uint32_t pamoja_scd4x_temperature_offset_milli_celsius(uint16_t word);
// Builds the SCD4x ambient-pressure word for a pressure.
//
// # Returns
//
// The word to write, at 100 pascals per count.
uint16_t pamoja_scd4x_ambient_pressure_word(uint32_t pascals);
// Reads an SCD4x ambient-pressure word back as a pressure.
//
// # Returns
//
// The pressure in pascals.
uint32_t pamoja_scd4x_ambient_pressure_pascals(uint16_t word);
// Reads the correction a forced recalibration applied.
//
// # Returns
//
// `true` when the recalibration took, with `*out_ppm` set to the correction in
// parts per million; `false` when the part reported that it failed.
//
// # Safety
//
// `out_ppm` must point to a writable `int32_t`.
bool pamoja_scd4x_forced_recalibration_correction_ppm(uint16_t word, int32_t *out_ppm);
// Builds the word an SCD4x returns for a forced-recalibration outcome.
//
// # Returns
//
// The word, which is the failure sentinel when `succeeded` is `false`.
uint16_t pamoja_scd4x_forced_recalibration_word(bool succeeded, int32_t correction_ppm);
// Reports whether an SCD4x word says automatic self-calibration is on.
//
// # Returns
//
// `true` when the part recalibrates itself against clean air.
bool pamoja_scd4x_automatic_self_calibration_enabled(uint16_t word);
// Builds the SCD4x word that turns automatic self-calibration on or off.
//
// # Returns
//
// The word to write.
uint16_t pamoja_scd4x_automatic_self_calibration_word(bool enabled);
// Reports whether an SCD4x self-test word says the part is healthy.
//
// # Returns
//
// `true` when the self test found no malfunction.
bool pamoja_scd4x_self_test_passed(uint16_t word);
// Reads the 48-bit serial number out of a nine-byte SCD4x frame.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_serial` set, or
// [`PamojaStatus::Codec`] if any word fails its checksum.
//
// # Safety
//
// `frame` must point to at least `frame_len` readable bytes, and `out_serial`
// must point to a writable `uint64_t`.
PamojaStatus pamoja_scd4x_serial_number(const uint8_t *frame,
                                        uintptr_t frame_len,
                                        uint64_t *out_serial);
// Builds the nine bytes an SCD4x sends for a serial number, each CRC included.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the nine bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least nine writable bytes.
PamojaStatus pamoja_scd4x_serial_number_frame(uint64_t serial, uint8_t *out_bytes);
// Converts a raw TMP117 temperature register to nano-degrees Celsius.
//
// # Returns
//
// The temperature, exact in integer arithmetic at the part's 7.8125 m°C step.
int64_t pamoja_tmp117_nano_celsius(int16_t raw);
// Converts a raw TMP117 temperature register to micro-degrees Celsius.
//
// # Returns
//
// The temperature, truncated toward zero at the last digit.
int32_t pamoja_tmp117_micro_celsius(int16_t raw);
// Converts a raw TMP117 temperature register to degrees Celsius.
//
// # Returns
//
// The temperature.
float pamoja_tmp117_celsius(int16_t raw);
// Builds the TMP117 temperature register that decodes to a temperature.
//
// # Returns
//
// The nearest register value, saturating at the ends of the part's range.
int16_t pamoja_tmp117_raw_from_micro_celsius(int32_t micro_celsius);
// Builds the TMP117 temperature register that decodes to a temperature in Celsius.
//
// # Returns
//
// The nearest register value, saturating at the ends of the part's range.
int16_t pamoja_tmp117_raw_from_celsius(float celsius);
// Builds the two bytes a TMP117 sends for a temperature register.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the two bytes written to `out_bytes`, or
// [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least two writable bytes.
PamojaStatus pamoja_tmp117_temperature_bytes(int16_t raw, uint8_t *out_bytes);
// Reads the two bytes a TMP117 sends for a temperature register.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_raw` set, or
// [`PamojaStatus::InvalidArgument`] if the buffer is not two bytes.
//
// # Safety
//
// `bytes` must point to at least `bytes_len` readable bytes, and `out_raw` must
// point to a writable `int16_t`.
PamojaStatus pamoja_tmp117_temperature_from_bytes(const uint8_t *bytes,
                                                  uintptr_t bytes_len,
                                                  int16_t *out_raw);
// Reads the device identifier out of a TMP117 device-ID register.
//
// # Returns
//
// The low twelve bits, which are 0x117 for a TMP117.
uint16_t pamoja_tmp117_device_id(uint16_t raw);
// Reads the die revision out of a TMP117 device-ID register.
//
// # Returns
//
// The high four bits.
uint8_t pamoja_tmp117_revision(uint16_t raw);