bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>
    /// Returns how long an SCD4x command may take before its result can be read. # Returns
    /// true when the command has a documented execution time, with *out_millis set to it;
    /// false when it completes as soon as it is acknowledged. # Safety out_millis must
    /// point to a writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_max_duration_ms(
        ushort command,
        out ushort outMillis);

    /// <summary>
    /// Reports whether an SCD4x accepts a command while it is measuring. # Returns true
    /// when the command may be sent without stopping periodic measurements.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_allowed_during_measurement(ushort command);

    /// <summary>
    /// Parses and CRC-checks a nine-byte SCD4x measurement frame. # Returns
    /// [PamojaStatus::Ok] on success, with *out_measurement filled in, or
    /// [PamojaStatus::Codec] if any word fails its checksum, which means the read was
    /// corrupted on the bus and should be repeated. # Safety frame must point to at least
    /// frame_len readable bytes, and out_measurement must point to a writable
    /// PamojaScd4xMeasurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_parse_measurement(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out PamojaScd4xMeasurement outMeasurement);

    /// <summary>
    /// Builds the SCD4x measurement a sensor reporting these physical values would send. #
    /// Returns [PamojaStatus::Ok], with *out_measurement filled in, or
    /// [PamojaStatus::InvalidArgument] if the pointer is null. # Safety out_measurement
    /// must point to a writable PamojaScd4xMeasurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_measurement_from_physical(
        ushort co2Ppm,
        int milliCelsius,
        uint humidityMilliPercent,
        out PamojaScd4xMeasurement outMeasurement);

    /// <summary>
    /// Builds the nine bytes an SCD4x sends for a set of raw words, each CRC included. #
    /// Returns [PamojaStatus::Ok] on success, with the nine bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least nine writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_measurement_bytes(
        ushort co2Ppm,
        ushort temperatureRaw,
        ushort humidityRaw,
        Span<byte> outBytes);

    /// <summary>
    /// Converts a raw SCD4x temperature word to milli-degrees Celsius. # Returns The
    /// temperature, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_scd4x_milli_celsius(ushort raw);

    /// <summary>Converts a raw SCD4x temperature word to degrees Celsius. # Returns The temperature.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_scd4x_celsius(ushort raw);

    /// <summary>
    /// Builds the SCD4x temperature word that decodes to a temperature. # Returns The raw
    /// word, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_temperature_raw(int milliCelsius);

    /// <summary>
    /// Converts a raw SCD4x humidity word to milli-percent. # Returns The relative
    /// humidity, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_scd4x_humidity_milli_percent(ushort raw);

    /// <summary>
    /// Converts a raw SCD4x humidity word to a relative humidity percentage. # Returns The
    /// relative humidity.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_scd4x_relative_humidity_percent(ushort raw);

    /// <summary>
    /// Builds the SCD4x humidity word that decodes to a relative humidity. # Returns The
    /// raw word, saturating at full scale.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_humidity_raw(uint milliPercent);

    /// <summary>
    /// Reports whether an SCD4x data-ready word says a fresh result is waiting. # Returns
    /// true when any of the low eleven bits is set.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_data_ready(ushort word);

    /// <summary>
    /// Builds the SCD4x temperature-offset word for an offset. # Returns The word to write,
    /// which scales by 2^16 rather than by the 2^16 - 1 the measurement words use.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_temperature_offset_word(uint milliCelsius);

    /// <summary>
    /// Reads an SCD4x temperature-offset word back as an offset. # Returns The offset in
    /// milli-degrees Celsius.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_scd4x_temperature_offset_milli_celsius(ushort word);

    /// <summary>
    /// Builds the SCD4x ambient-pressure word for a pressure. # Returns The word to write,
    /// at 100 pascals per count.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_ambient_pressure_word(uint pascals);

    /// <summary>
    /// Reads an SCD4x ambient-pressure word back as a pressure. # Returns The pressure in
    /// pascals.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_scd4x_ambient_pressure_pascals(ushort word);

    /// <summary>
    /// Reads the correction a forced recalibration applied. # Returns true when the
    /// recalibration took, with *out_ppm set to the correction in parts per million; false
    /// when the part reported that it failed. # Safety out_ppm must point to a writable
    /// int32_t.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_forced_recalibration_correction_ppm(
        ushort word,
        out int outPpm);

    /// <summary>
    /// Builds the word an SCD4x returns for a forced-recalibration outcome. # Returns The
    /// word, which is the failure sentinel when succeeded is false.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_forced_recalibration_word(
        [MarshalAs(UnmanagedType.U1)] bool succeeded,
        int correctionPpm);

    /// <summary>
    /// Reports whether an SCD4x word says automatic self-calibration is on. # Returns true
    /// when the part recalibrates itself against clean air.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_automatic_self_calibration_enabled(ushort word);

    /// <summary>
    /// Builds the SCD4x word that turns automatic self-calibration on or off. # Returns The
    /// word to write.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_scd4x_automatic_self_calibration_word(
        [MarshalAs(UnmanagedType.U1)] bool enabled);

    /// <summary>
    /// Reports whether an SCD4x self-test word says the part is healthy. # Returns true
    /// when the self test found no malfunction.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_scd4x_self_test_passed(ushort word);

    /// <summary>
    /// Reads the 48-bit serial number out of a nine-byte SCD4x frame. # Returns
    /// [PamojaStatus::Ok] on success, with *out_serial set, or [PamojaStatus::Codec] if any
    /// word fails its checksum. # Safety frame must point to at least frame_len readable
    /// bytes, and out_serial must point to a writable uint64_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_serial_number(
        ReadOnlySpan<byte> frame,
        nuint frameLen,
        out ulong outSerial);

    /// <summary>
    /// Builds the nine bytes an SCD4x sends for a serial number, each CRC included. #
    /// Returns [PamojaStatus::Ok] on success, with the nine bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least nine writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_scd4x_serial_number_frame(
        ulong serial,
        Span<byte> outBytes);

    /// <summary>
    /// Converts a raw TMP117 temperature register to nano-degrees Celsius. # Returns The
    /// temperature, exact in integer arithmetic at the part's 7.8125 m°C step.
    /// </summary>
    [LibraryImport(Library)]
    public static partial long pamoja_tmp117_nano_celsius(short raw);

    /// <summary>
    /// Converts a raw TMP117 temperature register to micro-degrees Celsius. # Returns The
    /// temperature, truncated toward zero at the last digit.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_tmp117_micro_celsius(short raw);

    /// <summary>
    /// Converts a raw TMP117 temperature register to degrees Celsius. # Returns The
    /// temperature.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_tmp117_celsius(short raw);

    /// <summary>
    /// Builds the TMP117 temperature register that decodes to a temperature. # Returns The
    /// nearest register value, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial short pamoja_tmp117_raw_from_micro_celsius(int microCelsius);

    /// <summary>
    /// Builds the TMP117 temperature register that decodes to a temperature in Celsius. #
    /// Returns The nearest register value, saturating at the ends of the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial short pamoja_tmp117_raw_from_celsius(float celsius);

    /// <summary>
    /// Builds the two bytes a TMP117 sends for a temperature register. # Returns
    /// [PamojaStatus::Ok] on success, with the two bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least two writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_temperature_bytes(
        short raw,
        Span<byte> outBytes);

    /// <summary>
    /// Reads the two bytes a TMP117 sends for a temperature register. # Returns
    /// [PamojaStatus::Ok] on success, with *out_raw set, or [PamojaStatus::InvalidArgument]
    /// if the buffer is not two bytes. # Safety bytes must point to at least bytes_len
    /// readable bytes, and out_raw must point to a writable int16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_temperature_from_bytes(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out short outRaw);

    /// <summary>
    /// Reads the device identifier out of a TMP117 device-ID register. # Returns The low
    /// twelve bits, which are 0x117 for a TMP117.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_tmp117_device_id(ushort raw);

    /// <summary>
    /// Reads the die revision out of a TMP117 device-ID register. # Returns The high four
    /// bits.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_tmp117_revision(ushort raw);
